--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -314,10 +314,6 @@
 			"kol_chaptermaster":"graphics/portraits/kol_master.png",
 			"kol_agent_m":"graphics/portraits/kol_agent_m.png",
 			"kol_agent_f":"graphics/portraits/kol_agent_f.png",
-			"zea_boss_alphaplus":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_boss_alphaplus.png",
-			"zea_boss_amaterasu":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_boss_amaterasu.png",
-			"zea_boss_corrupting_heart":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_boss_corrupting_heart.png",
-			"zea_boss_nian":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_boss_nian.png",
 			"zea_dawn_1":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dawn_1.png",
 			"zea_dawn_2":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dawn_2.png",
 			"zea_dawn_3":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dawn_3.png",
@@ -331,7 +327,12 @@
 			"zea_edf_3":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_edf_3.png",
 			"zea_dawn_boss_core":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/cores/zea_dawn_boss_core.png",
 			"zea_dusk_boss_core":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/cores/zea_dusk_boss_core.png",
-			"zea_elysia_boss_core":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/cores/zea_elysia_boss_core.png"
+			"zea_elysia_boss_core":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/cores/zea_elysia_boss_core.png",
+			"zea_boss_nian":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/cores/zea_dawn_boss_core.png",
+			"zea_boss_yukionna":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/cores/zea_dusk_boss_core.png",
+			"zea_boss_corrupting_heart":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/cores/zea_elysia_boss_core.png",
+			"zea_boss_alphaplus":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_boss_alphaplus.png",
+			"zea_boss_amaterasu":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_boss_amaterasu.png"
 		},
 		"icons": {
 			"coronal_cap_top":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/icons/hullsys/coronal_cap_top.png",
