--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -281,7 +281,32 @@
 			"zea_dusk_onryo_glow2":"graphics/zea/fx/zea_dusk_onryo_glow2.png",
 			"zea_dusk_funayurei_glow1":"graphics/zea/ships/zea_dusk_funayurei_glow1.png",
 			"zea_dusk_funayurei_glow2":"graphics/zea/ships/zea_dusk_funayurei_glow2.png",
-			"zea_boss_iaya_glow1":"graphics/zea/ships/zea_boss_iaya_glow1.png"
+			"zea_boss_iaya_glow1":"graphics/zea/ships/zea_boss_iaya_glow1.png",
+			
+			"zea_boss_ameonna_1_head_glow1":"graphics/zea/ships/ameonna/zea_boss_ameonna_1_head_glow1.png",
+			"zea_boss_ameonna_1_head_glow2":"graphics/zea/ships/ameonna/zea_boss_ameonna_1_head_glow1.png",
+			
+			"zea_boss_ameonna_2_glow1":"graphics/zea/ships/ameonna/zea_boss_ameonna_2_glow1.png",
+			"zea_boss_ameonna_2_glow2":"graphics/zea/ships/ameonna/zea_boss_ameonna_2_glow2.png",
+			
+			"zea_boss_ameonna_3_glow1":"graphics/zea/ships/ameonna/zea_boss_ameonna_3_glow1.png",
+			"zea_boss_ameonna_3_glow2":"graphics/zea/ships/ameonna/zea_boss_ameonna_3_glow2.png",
+			
+			"zea_boss_ameonna_4_5_glow1":"graphics/zea/ships/ameonna/zea_boss_ameonna_4_5_glow1.png",
+			"zea_boss_ameonna_4_5_glow2":"graphics/zea/ships/ameonna/zea_boss_ameonna_4_5_glow2.png",
+			
+			"zea_boss_ameonna_6_glow1":"graphics/zea/ships/ameonna/zea_boss_ameonna_6_glow1.png",
+			"zea_boss_ameonna_6_glow2":"graphics/zea/ships/ameonna/zea_boss_ameonna_6_glow2.png",
+			
+			"zea_boss_ameonna_7_glow1":"graphics/zea/ships/ameonna/zea_boss_ameonna_7_glow1.png",
+			"zea_boss_ameonna_7_glow2":"graphics/zea/ships/ameonna/zea_boss_ameonna_7_glow2.png",
+			
+			"zea_boss_ameonna_8_glow1":"graphics/zea/ships/ameonna/zea_boss_ameonna_8_glow1.png",
+			"zea_boss_ameonna_8_glow2":"graphics/zea/ships/ameonna/zea_boss_ameonna_8_glow2.png",
+			
+			"zea_boss_ameonna_9_glow1":"graphics/zea/ships/ameonna/zea_boss_ameonna_9_glow1.png",
+			"zea_boss_ameonna_9_glow2":"graphics/zea/ships/ameonna/zea_boss_ameonna_9_glow2.png",
+			
 		},
 		"backgrounds": {
 			"zea_bg_delta_site":"graphics/zea/backgrounds/zea_bg_delta_site.png",
