Update Starship Legend's factionConfigurations.json
Fixes the following calls to obsolete variants:

WARN  starship_legends.FactionConfig  - Hull ID kol_alysee_Standard not found.
WARN  starship_legends.FactionConfig  - Hull ID kol_snowdrop_Standard not found.
 WARN  starship_legends.FactionConfig  - Hull ID kol_larkspur_Standard not found.

--- a/data/config/starship_legends/factionConfigurations.json
+++ b/data/config/starship_legends/factionConfigurations.json
@@ -34,9 +34,9 @@
 		#	but only at markets owned by your faction
 		"exclusiveDerelictFrequency":{
 			# This ship will only be available at your faction's markets
-			"kol_alysee_Standard":0.4,
-			"kol_snowdrop_Standard":0.4,
-			"kol_larkspur_Standard":0.5,
+			"kol_alysse_Blank":0.4,
+			"kol_snowdrop_Blank":0.4,
+			"kol_larkspur_Blank":0.5,
 		},
 		
 		# Edit the values in the lists below to change the probability of fleets from
